--- a/chromeApp/style.css
+++ b/chromeApp/style.css
@@ -12,6 +12,13 @@ h1{
   margin: 40px 0px 20px;
 }
 
+h3{
+  color: #396;
+  font-weight: 100;
+  font-size: 30px;
+  margin: 40px 10px 20px;
+}
+
 #clockdiv{
     font-family: sans-serif;
     color: #fff;
